--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VITE!!</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/main.js"></script>
-  </body>
+    <title>Vite Project</title>
+  <style>
+    button {
+      padding: 0.7rem;
+      width: 10%
+    }
+  </style>
+</head>
+
+<body class="Summer">
+  <header class="header">
+    <h1 class="header-title">Seasonal Resturant</h1>
+  </header>
+  <div class="Season">
+
+    <button class="main">Season</button>
+  </div>
+
+
+  <div class="filterb">
+    <button class="filter-buttons" id="all">All</button>
+    <button class="filter-buttons" id="Vegan">Vegan</button>
+    <button class="filter-buttons" id="Summer">Summer</button>
+    <button class="filter-buttons" id="Winter">Winter</button>
+    <button class="filter-buttons" id="Appetizer">Appetizer </button>
+    <button class="filter-buttons" id="Tasty">Tasty</button>
+  </div>
+  <div class="cardcontainer">
+  </div>
+
+  <script type="module" src="./js/main.js"></script>
+</body>
+
 </html>
