--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite Project</title>
+    <link rel = "stylesheet" href="variable.css" />
   <style>
     button {
       padding: 0.7rem;
@@ -24,7 +25,7 @@
 
 
   <div class="filterb">
-    <button class="filter-buttons" id="all">All</button>
+    <button class="filter-buttons" id="All">All</button>
     <button class="filter-buttons" id="Vegan">Vegan</button>
     <button class="filter-buttons" id="Summer">Summer</button>
     <button class="filter-buttons" id="Winter">Winter</button>
@@ -34,7 +35,7 @@
   <div class="cardcontainer">
   </div>
 
-  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
